implemented logs for new OutputHandler